<resources>
    <string name="app_name">ExCon2</string>
    <string name="BTN_GET">Get</string>
    <string name="BTN_DOM">DOM</string>
    <string name="LABEL_FEMALE">female</string>
    <string name="LABEL_MALE">male</string>
    <string name="BTN_RECYCLE">Recycle</string>
    <string name="BTN_RATE">Rate</string>
    <string name="BTN_ANIME">Anime</string>
    <string name="BTN_START">START</string>
    <string name="BTN_SEEK">Seek</string>
    <string name="BTN_CM">ConMenu</string>
    <string name="BTN_CELSIUS">Celsius</string>
    <string name="BTN_FAHRENHEIT">Fahrenheit</string>
    <string name="BTN_CALC">Calc</string>
    <string name="BTN_TEMPERATURE">C/F</string>
    <string name="BTN_STOP">Stop</string>
    <string name="BTN_RESET">Reset</string>
    <string name="BTN_STOP_WATCH">StopWatch</string>
    <string name="MENU_ADD">add</string>
    <string name="MENU_RESET">reset</string>
    <string name="MENU_ABOUT">about</string>
    <string name="MENU_EXIT">exit</string>
    <string name="MENU_SETTINGS">Settings</string>
    <string name="MENU_LOAD">Load</string>
    <string name="BTN_CUSTOM_ACTION">CustomAct</string>
    <string name="BTN_DICE">Dice</string>
    <string name="BTN_LARGE_BMP">LargeBmp</string>
    <string name="BTN_TRAFFIC_LIGHT">Traffic</string>

    <string name="hello_world">Hello World</string>
</resources>
