<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/female"
            android:text="@string/LABEL_FEMALE"></RadioButton>

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/male"
            android:checked="true"

            android:text="@string/LABEL_MALE"></RadioButton>

    </RadioGroup>

    <Button
        android:id="@+id/btnGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/gender"
        android:layout_margin="16dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="48dp"
        android:onClick="onClick"
        android:text="@string/BTN_GET"
        app:layout_constraintStart_toStartOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/btnRATE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/BTN_RATE"
        app:layout_constraintStart_toEndOf="@+id/btnGet"
        app:layout_constraintTop_toTopOf="@+id/btnGet" />

    <Button
        android:id="@+id/btnRecycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/BTN_RECYCLE"
        app:layout_constraintStart_toEndOf="@+id/btnRATE"
        app:layout_constraintTop_toTopOf="@+id/btnRATE" />

    <Button
        android:id="@+id/btnANIME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BTN_ANIME"
        app:layout_constraintStart_toStartOf="@+id/btnGet"
        app:layout_constraintTop_toBottomOf="@+id/btnGet" />

    <Button
        android:id="@+id/btnSEEK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/BTN_SEEK"
        app:layout_constraintStart_toEndOf="@+id/btnANIME"
        app:layout_constraintTop_toBottomOf="@+id/btnRATE" />

    <Button
        android:id="@+id/btnCM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/BTN_CM"
        app:layout_constraintStart_toEndOf="@+id/btnSEEK"
        app:layout_constraintTop_toBottomOf="@+id/btnRecycle" />

    <Button
        android:id="@+id/btnTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BTN_TEMPERATURE"
        app:layout_constraintStart_toStartOf="@+id/btnANIME"
        app:layout_constraintTop_toBottomOf="@+id/btnANIME" />

    <Button
        android:id="@+id/btnSTOPWATCH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/BTN_STOP_WATCH"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toEndOf="@+id/btnTemperature"
        app:layout_constraintTop_toTopOf="@+id/btnTemperature" />

</android.support.constraint.ConstraintLayout>